# TaggyTime

./: .gitignore  Cargo.toml  README.md  README.me  run.sh  rustfmt.toml
src/: args.rs  command_parser.rs  const_params.rs  error.rs  load_file.rs  main.rs  percent.rs  taggy_cmd.rs  tasks_util.rs  todo.rs  util.rs
src/calendar/: cal_event.rs  mod.rs  task.rs  todo.rs
src/ics_parser/: ics_syntax.rs  lexer.rs  mod.rs  peekbuf.rs
src/taggy_io/: mod.rs
src/time/: date.rs  fact.rs  mod.rs  month.rs  time_parser.rs  timezone.rs  week.rs  year.rs
src/util_typs/: mod.rs  percent.rs  refinement.rs
