[package]
name = "taggytime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datetime = "0.5.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
clap = {version = "4.2.7", features = ["derive"]}
home = "0.5.5"
colored = "2.0.0"